Re-editing index

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="container">
 
       <!-- EDIT THIS SECTION TO INCLUDE YOUR EXHIBITION DETAILS -->
-      <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">Forecasters!</h1>
+      <h1 ng-hide="listHide" class="ng-hide" id="exhibition-name" class="page-header">Forecasters</h1>
       <h2 ng-hide="listHide" class="ng-hide" id="exhibition-tagline">An assortment of weather prophets</h2>
       <div ng-hide="listHide" class="ng-hide" id="exhibition-description">
         <p>This site displays content from Trove. It is a demonstration of how resources collected using <a href="http://help.nla.gov.au/trove/using-trove/creating-contributing/lists">Trove lists</a> can be reused through the <a href="http://help.nla.gov.au/trove/building-with-trove">Trove API</a> to create new interfaces and applications.</p>
