Fixed the item grid view using Masonry and re-enabled

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <p><small>This demonstration was created by <a href="http://discontents.com.au/about-me">Tim Sherratt</a> (<a href="http://twitter.com/wragge">@wragge</a>) to show how easy it is to create your own exhibition.</small></p>
       </div>
       <ul ng-hide="listHide" class="ng-hide" id="lists">
+        <!-- CHANGE THIS TO LIST THE TROVE LISTS THAT MAKE UP YOUR EXHIBITION -->
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=43805">A day in the life of Mr Mares, weatherman</a></li>
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=83777">Clement Wragge</a></li>
         <li><a class="list-link" href="http://trove.nla.gov.au/list?id=83774">Inigo Jones</a></li>
@@ -66,7 +67,7 @@
         var config = {};
         config.listSnippet = 50;
         config.directLinks = true;
-        config.showGrid = false;
+        config.showGrid = true;
       </script>
       <!-- END OF YOUR DETAILS -->
 
@@ -93,8 +94,8 @@
 
 
 
-    <script src="scripts/vendor.4b709218.js"></script>
+    <script src="scripts/vendor.21ff598d.js"></script>
 
-        <script src="scripts/scripts.8c152f6c.js"></script>
+        <script src="scripts/scripts.fa7195f7.js"></script>
 </body>
 </html>
