--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         config.listSnippet = 50;
         config.directLinks = true;
         config.showGrid = true;
+        config.https = true;
       </script>
       <!-- END OF YOUR DETAILS -->
 
@@ -96,6 +97,6 @@
 
     <script src="scripts/vendor.21ff598d.js"></script>
 
-        <script src="scripts/scripts.fa7195f7.js"></script>
+        <script src="scripts/scripts.8e7bfdfc.js"></script>
 </body>
 </html>
