Set use https proxy to false

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         config.listSnippet = 50;
         config.directLinks = true;
         config.showGrid = true;
-        config.https = true;
+        config.https = false;
       </script>
       <!-- END OF YOUR DETAILS -->
 
